// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component should match snapshot after toggling favorite 1`] = `
<article
  className="Card  hide"
  onClick={[Function]}
>
  <img
    src="words.jpg"
  />
  <button
    className="after-star"
    onClick={[Function]}
  />
</article>
`;

exports[`Card component should match snapshot with props passed 1`] = `
<article
  className="Card  hide"
  onClick={[Function]}
>
  <img
    src="words.jpg"
  />
  <button
    className="before-star"
    onClick={[Function]}
  />
</article>
`;
